# CraftUi

./: CMakeLists.txt  README.md  main.cpp
resources/shaders/compiled/frag/: rasterization_default_2d.spirv
resources/shaders/compiled/vert/: rasterization_default_2d.spirv
resources/shaders/compute/: compute_shader_test.comp
resources/shaders/compute/compiled/: compute_shader_test.comp
resources/shaders/frag/: rasterization_default_2d.frag  rasterization_default_text.frag
resources/shaders/vert/: rasterization_default_2d.vert  rasterization_default_text.vert
src/: CMakeLists.txt  main.cpp
src/core/: app.cpp  app.h  macros.h
src/entities/: entity.h
src/entities/extensions/: extension.h  extension_labels.h  generic_extensions.cpp  generic_extensions.h
src/examples/glfw/: glfw_examples.hpp
src/examples/vulkan/: vulkan_examples.hpp
src/glfw/: glfw.cpp  glfw.h  glfw_utils.cpp  glfw_utils.h  glfw_window.cpp  glfw_window.h
src/renderer/: font.cpp  font.h  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  scene.cpp  scene.h  vertex.cpp  vertex.h  window.h
src/renderer/pipelines/: pipeline_label.h  rasterization_pipeline.cpp  rasterization_pipeline.h
src/shader_compiler/: compile_Spir_V.cpp  compile_Spir_V.h
src/utils/: utils.hpp
src/vulkan/: vk_buffer.cpp  vk_buffer.h  vk_descriptor_set.cpp  vk_descriptor_set.h  vk_device.cpp  vk_device.h  vk_graphic_device.cpp  vk_graphic_device.h  vk_image.cpp  vk_image.h  vk_instance.cpp  vk_instance.h  vk_pipeline.cpp  vk_pipeline.h  vk_shader.cpp  vk_shader.h  vk_swap_chain.cpp  vk_swap_chain.h  vk_utils.cpp  vk_utils.h  vulkan.cpp  vulkan.h
src/vulkan_config/: vulkan_config.hpp
